--- a/index.html
+++ b/index.html
@@ -310,6 +310,8 @@
 <!-- Team Members Section -->
 <section id="team-members">
     <h2>Team Members</h2>
+    <br><button class="button" onclick="toggleInfo('Sam')"> 01fe23bcs060.Ria Javalagi  </li>
+        <section id="course-intro" style="display:none;">
     <ul>
    <h2>1. Problems in Nature</h2>
     <h3><b>Iteration:</b></h3>
