--- a/index.html
+++ b/index.html
@@ -310,230 +310,36 @@
 <!-- Team Members Section -->
 <section id="team-members">
     <h2>Team Members</h2>
-    <br><button class="button" onclick="toggleInfo('Sam')"> 01fe23bcs060.Ria Javalagi  </li>
-        <section id="course-intro" style="display:none;">
-    <ul>
-   <h2>1. Problems in Nature</h2>
-    <h3><b>Iteration:</b></h3>
-    <p><b>Compound Interest:</b> Keeps adding interest over time.</p>
-    <p><b>Traffic Lights:</b> Switches between red, yellow, and green.</p>
 
-    <h3><b>Recursion:</b></h3>
-    <p><b>Directory Size:</b> Adds up folder sizes, including subfolders.</p>
-    <p><b>Fractals:</b> Patterns repeat in smaller versions.</p>
+    <div class="team-member">
+        <button class="button" onclick="toggleInfo('Ria')">01fe23bcs060.Ria Javalagi</button>
+        <section id="Ria-info" style="display:none;">
+            <h2>Reff 1</h2> 
+        </section>
+    </div>
 
-    <h3><b>Backtracking:</b></h3>
-    <p><b>Sudoku:</b> Fills in numbers and fixes mistakes.</p>
-    <p><b>Maze:</b> Tries a path, goes back if stuck.</p>
+    <div class="team-member">
+        <button class="button" onclick="toggleInfo('Sanjana')">01fe23bcs057.Sanjana Shetti</button>
+        <section id="Sanjana-info" style="display:none;">
+            <h2>Reff 2</h2>
+        </section>
+    </div>
 
-    <h3><b>Divide and Conquer:</b></h3>
-    <p><b>Merging Records:</b> Breaks data into pieces and puts it together.</p>
-    <p><b>Sorting (Merge Sort):</b> Splits, sorts, and combines data.</p>
+    <div class="team-member">
+        <button class="button" onclick="toggleInfo('Chinmayi')">01fe23bcs080.Chinmayi K.B</button>
+        <section id="Chinmayi-info" style="display:none;">
+            <h2>Reff 3</h2>
+        </section>
+    </div>
 
-    <h3><b>Greedy Algorithm:</b></h3>
-    <p><b>ATM Withdrawal:</b> Takes the biggest bills first.</p>
-    <p><b>Activity Scheduling:</b> Chooses the task that ends quickest.</p>
+    <div class="team-member">
+        <button class="button" onclick="toggleInfo('Ananya')">01fe23bcs055.Ananya Pattanashetty</button>
+        <section id="Ananya-info" style="display:none;">
+            <h2>Reff 4</h2>
+        </section>
+    </div>
 
-    <h3><b>Dynamic Programming:</b></h3>
-    <p><b>Route Planning:</b> Solves parts of a route to find the best one.</p>
-    <p><b>Fibonacci:</b> Remembers results to avoid doing the same work again.</p>
-
-    <h3><b>Graph Algorithms:</b></h3>
-    <p><b>Dijkstra (Shortest Path):</b> Finds the quickest route.</p>
-    <p><b>Prim's/Kruskal's (MST):</b> Connects with the least cost.</p>
-
-    <h3><b>Sorting Algorithms:</b></h3>
-    <p><b>Task Sorting:</b> Organizes tasks to get them done efficiently.</p>
-    <p><b>Ticket Sorting:</b> Sorts tickets by price.</p>
-
-    <h3><b>Searching Algorithms:</b></h3>
-    <p><b>Linear Search:</b> Finds a file.</p>
-    <p><b>Binary Search:</b> Finds a word in a sorted list.</p>
-
-    <h2>2. Space and Time Efficiency</h2>
-    <p><b>Space Efficiency:</b> Extra memory an algorithm uses.</p>
-    <p><b>Time Efficiency:</b> Speed at which an algorithm completes its task.</p>
-
-    <h3>Orders of Growth</h3>
-    <table border="1">
-        <tr>
-            <th>Order</th>
-            <th>Time</th>
-            <th>Space</th>
-        </tr>
-        <tr>
-            <td>O(1)</td>
-            <td>Array access</td>
-            <td>Single variable</td>
-        </tr>
-        <tr>
-            <td>O(log n)</td>
-            <td>Binary search</td>
-            <td>Recursive stack</td>
-        </tr>
-        <tr>
-            <td>O(n)</td>
-            <td>Loop through list</td>
-            <td>Storing list</td>
-        </tr>
-        <tr>
-            <td>O(n log n)</td>
-            <td>Merge Sort</td>
-            <td>Auxiliary space</td>
-        </tr>
-        <tr>
-            <td>O(n²)</td>
-            <td>Bubble Sort</td>
-            <td>2D matrix</td>
-        </tr>
-        <tr>
-            <td>O(2^n)</td>
-            <td>Brute force</td>
-            <td>Storing subsets</td>
-        </tr>
-        <tr>
-            <td>O(n!)</td>
-            <td>Generating permutations</td>
-            <td>Storing permutations</td>
-        </tr>
-    </table>
-
-    <h3>Complexity Order</h3>
-    <p><b>Time:</b> O(1) &lt; O(log n) &lt; O(n) &lt; O(n log n) &lt; O(n²) &lt; O(2^n) &lt; O(n!)</p>
-    <p><b>Space:</b> O(1) &lt; O(log n) &lt; O(n) &lt; O(n log n) &lt; O(n²) &lt; O(2^n) &lt; O(n!)</p>
-
-    <h3>Why It Matters:</h3>
-    <ul>
-        <li><b>Optimized Performance:</b> Faster processing.</li>
-        <li><b>Efficient Memory Use:</b> Saves memory.</li>
-        <li><b>Scalability:</b> Handles larger data sets.</li>
-        <li><b>Real-World Impact:</b> Improves system reliability.</li>
-        <li><b>Resource Constraints:</b> Smooth operation on limited devices.</li>
-    </ul>
-
-    <h2>3. Design Principles</h2>
-    <ul>
-        <li><b>Shortest Path Trees:</b> Finds the most efficient routes. Real-world example: GPS routing.</li>
-        <li><b>Partitioning:</b> Breaks down complex problems into smaller segments. Example: Quicksort.</li>
-        <li><b>Balancing and Rotations:</b> Maintains optimal performance of data structures. Examples: AVL trees, Red-Black trees.</li>
-        <li><b>Edge Relaxation:</b> Allows dynamic updating of path solutions. Example: Dijkstra's algorithm.</li>
-        <li><b>Level Order Traversal:</b> Systematic, layer-by-layer exploration. Used in graph and tree navigation techniques.</li>
-        <li><b>Pruning:</b> Eliminates unnecessary solution paths. Reduces computational complexity.</li>
-        <li><b>Brave and Cautious Travel Strategies:</b> DFS: Deep exploration. BFS: Methodical investigation.</li>
-    </ul>
-
-    <h2>4. Hierarchical Data Structures</h2>
-    <ul>
-        <li><b>Tree:</b> Represents hierarchies (filesystems, organizations). Pro: Simple and intuitive. Con: Lacks balance; inefficient operations.</li>
-        <li><b>Binary Search Tree (BST):</b> Sorted data storage and retrieval. Pro: Efficient when balanced. Con: Degrades if unbalanced.</li>
-        <li><b>AVL Tree:</b> Always balanced; guarantees O(log n) operations. Con: Costly rotations during updates.</li>
-        <li><b>2-3 Tree:</b> Ensures perfect balance with multi-child nodes. Pro: Robust structure. Con: Implementation complexity.</li>
-        <li><b>Red-Black Tree:</b> Dynamic operations with approximate balancing. Pro: Predictable O(log n). Con: Slightly slower lookups compared to AVL.</li>
-        <li><b>Heap:</b> Priority management and sorting. Pro: Quick min/max access. Con: Inefficient for general-purpose searches.</li>
-        <li><b>Trie:</b> Efficient string and prefix searches. Pro: Fast operations. Con: High memory usage.</li>
-    </ul>
-
-    <h2>5. Array Query Algorithms</h2>
-    <p><b>Why Needed:</b></p>
-    <ul>
-        <li><b>Efficient Data Access:</b> Fast retrieval of data in large arrays.</li>
-        <li><b>Optimized Operations:</b> Reduce time complexity.</li>
-        <li><b>Dynamic Applications:</b> Handle real-time tasks.</li>
-    </ul>
-
-    <p><b>Implications:</b></p>
-    <ul>
-        <li><b>Speed vs. Complexity:</b> Faster queries require more preprocessing.</li>
-        <li><b>Adaptability:</b> Quick updates.</li>
-        <li><b>Scalability:</b> Process millions of data points.</li>
-    </ul>
-
-    <p><b>Applications:</b></p>
-    <ul>
-        <li><b>Range Queries:</b> Segment Tree, Fenwick Tree.</li>
-        <li><b>Dynamic Updates:</b> Fenwick Tree, Lazy Propagation.</li>
-        <li><b>Prefix Queries:</b> Prefix Sum Array.</li>
-        <li><b>Static Queries:</b> Sparse Table.</li>
-        <li><b>Searches:</b> Binary Search.</li>
-        <li><b>Pattern Matching:</b> KMP, Sliding Window.</li>
-    </ul>
-
-    <p><b>Core Principles:</b></p>
-    <ul>
-        <li><b>Divide and Conquer:</b> Split arrays for efficiency.</li>
-        <li><b>Preprocessing:</b> Build structures for quick queries.</li>
-        <li><b>Caching:</b> Reuse computed values.</li>
-        <li><b>Space-Time Tradeoff:</b> Balance memory and speed.</li>
-        <li><b>Incremental Updates:</b> Minimize recomputations.</li>
-    </ul>
-
-    <h2>6. Trees and Graphs</h2>
-    <p><b>Tree:</b> Hierarchical structure with one root. Characteristics: Acyclic, connected, directed.</p>
-    <p><b>Graph:</b> Collection of nodes connected by edges. Characteristics: Can be cyclic, disconnected, directed/undirected.</p>
-
-    <h3>Tree Traversals</h3>
-    <ul>
-        <li><b>Pre-order:</b> Visit root, left, right.</li>
-        <li><b>In-order:</b> Visit left, root, right.</li>
-        <li><b>Post-order:</b> Visit left, right, root.</li>
-        <li><b>Level-order (BFS):</b> Visit nodes level by level.</li>
-    </ul>
-
-    <h3>Graph Traversals</h3>
-    <ul>
-        <li><b>DFS:</b> Explore deeply along branches.</li>
-        <li><b>BFS:</b> Explore neighbors at current depth first.</li>
-    </ul>
-
-    <p><b>Applications:</b></p>
-    <ul>
-        <li><b>Tree:</b> File systems, expression trees, database indexing, decision trees in ML.</li>
-        <li><b>Graph:</b> Social networks, routing, web crawling, recommendation systems.</li>
-    </ul>
-
-    <h2>7. Sorting and Searching Algorithms</h2>
-    <h3><b>Sorting Algorithms:</b></h3>
-    <ul>
-        <li><b>Bubble Sort:</b> Swaps adjacent elements until sorted. Complexity: O(n²). Use: Small datasets.</li>
-        <li><b>Insertion Sort:</b> Builds the sorted list one element at a time. Complexity: O(n²). Use: Nearly sorted datasets.</li>
-        <li><b>Merge Sort:</b> Divides and merges sublists. Complexity: O(n log n). Use: Large-scale data.</li>
-        <li><b>Quick Sort:</b> Partitions around a pivot and sorts. Complexity: O(n log n) (average). Use: General-purpose sorting.</li>
-        <li><b>Heap Sort:</b> Sorts by using a binary heap. Complexity: O(n log n). Use: Accessing max/min values.</li>
-    </ul>
-
-    <h3><b>Searching Algorithms:</b></h3>
-    <ul>
-        <li><b>Linear Search:</b> Checks each element. Complexity: O(n). Use: Small or unsorted datasets.</li>
-        <li><b>Binary Search:</b> Divides sorted list in half. Complexity: O(log n). Use: Sorted data.</li>
-        <li><b>Hashing:</b> Uses a hash function for fast lookups. Complexity: O(1) (avg). Use: Databases and caches.</li>
-        <li><b>DFS:</b> Explores deeply along branches. Complexity: O(V + E). Use: AI, network routing.</li>
-        <li><b>BFS:</b> Explores all neighbors at current depth. Complexity: O(V + E). Use: Shortest path, GPS.</li>
-    </ul>
-
-    <p><b>Real-World Applications:</b></p>
-    <ul>
-        <li><b>Databases:</b> Sorting and searching for efficient retrieval.</li>
-        <li><b>E-commerce:</b> Sorting products, binary search for items.</li>
-        <li><b>Operating Systems:</b> Sorting files and searching processes.</li>
-        <li><b>Web Search Engines:</b> Sorting results, web page searches.</li>
-        <li><b>Navigation:</b> BFS/Dijkstra for shortest path finding.</li>
-    </ul>
-    </section><br>
-    <br><button class="button" onclick="toggleInfo('Sam')"> 01fe23bcs057.Sanjana Shetti  </li>
-        <section id="course-intro" style="display:none;">
-    <h2>Reff 2</h2>
-             </section><br>
-    <br><button class="button" onclick="toggleInfo('Chi')"> 01fe23bcs080.Chinmayi K.B </li>
-        <section id="course-intro" style="display:none;">
-    <h2>CReff 3</h2>
-             </section><br>
-    <br><button class="button" onclick="toggleInfo('Aps')"> 01fe23bcs055.Ananya Pattanashetty </li>
-        <section id="course-intro" style="display:none;">
-    <h2Reff4</h2>
-             </section><br>
-        <!-- Add more team members if required -->
-    </ul>
-</section><br>
+    </section>
 
 <footer>
     <p>&copy; 2024 VAYUJIVA | Designed by RIA JAVALAGI</p>
