--- a/index.html
+++ b/index.html
@@ -128,11 +128,7 @@
 <input type="checkbox" id="AnanyaB" class="toggle-section" hidden>
 <section class="info-section">
     <h2>INDUSTRIAL STRATEGIES for Ananya B P</h2>
-    <ul>
-        <li><strong>a. Goal (SDG_GOAL):*</strong> Goal 11: Make cities and human settlements inclusive, safe, resilient, and sustainable.</li> 
-        <li><strong>b. Target (SDG_TARGET):*</strong> Target 11.2: By 2030, provide access to safe, affordable, accessible, and sustainable transport systems for all, improving road safety, notably by expanding public transport.</li>  
-        <li><strong>c. Indicator (SDG_INDICATOR):*</strong> Indicator 11.2.1: Proportion of population that has convenient access to public transport, by sex, age, and persons with disabilities.</li>
-    </ul>
+    
 </section>
 
 <input type="checkbox" id="Ria" class="toggle-section" hidden>
@@ -159,7 +155,11 @@
 <section class="info-section">
     <h2>INDUSTRIAL STRATEGIES for Chinmayi</h2>
     <ul>
-        <li><strong>abcd</strong></li>
+        <li><strong><ul>
+        <li><strong>a. Goal (SDG_GOAL):*</strong> Goal 11: Make cities and human settlements inclusive, safe, resilient, and sustainable.</li> 
+        <li><strong>b. Target (SDG_TARGET):*</strong> Target 11.2: By 2030, provide access to safe, affordable, accessible, and sustainable transport systems for all, improving road safety, notably by expanding public transport.</li>  
+        <li><strong>c. Indicator (SDG_INDICATOR):*</strong> Indicator 11.2.1: Proportion of population that has convenient access to public transport, by sex, age, and persons with disabilities.</li>
+    </ul></strong></li>
     </ul>
 </section>
 
@@ -185,6 +185,13 @@
 
 </section>
 </section>
+    <section id="Problem-statement">
+    <h2>problem statement </h2>
+    <dl>
+        Urban mobility faces issues like traffic congestion, lack of parking, and slow emergency response. A smart system that manages traffic, parking, and emergencies can improve efficiency and reduce delays.
+    </dl>
+</section>
+
     <!-- Education Details Section -->
 <section id="education-details">
     <h2>Education Details</h2>
