--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 <!-- About Section Wrapped in More Info -->
 <section>
     <h1>About VAYUJIVA</h1>
-    <p>Vayujiva: A planned smart city in Karnataka, India, focusing on sustainability, technology, and citizen welfare.</p>
+    <br><p>Vayujiva: A planned smart city in Karnataka, India, focusing on sustainability, technology, and citizen welfare.</p>
+    <br>
     <button class="button" onclick="toggleInfo('about-section', this)">More Info</button>
     <div id="about-section" style="display: none;">
         <h2>Location and Population</h2>
