--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@
 <!-- Industrial Strategy Sections -->
 <input type="checkbox" id="AnanyaB" class="toggle-section" hidden>
 <section class="info-section">
-    <h2>INDUSTRIAL STRATEGIES for Ananya B P</h2>
+    <h2>INDUSTRIAL STRATEGIES Of Ananya B P</h2>
     
 </section>
 
 <input type="checkbox" id="Ria" class="toggle-section" hidden>
 <section class="info-section">
-    <h2>INDUSTRIAL STRATEGIES for Ria</h2>
+    <h2>INDUSTRIAL STRATEGIES Of Ria</h2>
     <ul>
         <li><strong>SDG Target 9.1</strong><br>Focus: Develop quality, reliable, sustainable, and resilient infrastructure...</li>
         <li><strong>SDG Target 11.3</strong><br>Focus: Enhance inclusive and sustainable urbanization...</li>
@@ -276,7 +276,7 @@
 
 <input type="checkbox" id="Sanjana" class="toggle-section" hidden>
 <section class="info-section">
-    <h2>INDUSTRIAL STRATEGIES for Sanjana</h2>
+    <h2>INDUSTRIAL STRATEGIES Of Sanjana</h2>
     <ul>
         <li><strong>SDG Target 11.2</strong><br>Focus: Provide access to safe, affordable, accessible transport...</li>
         <li><strong>SDG Target 9.4</strong><br>Focus: Upgrade infrastructure to make them sustainable...</li>
@@ -286,7 +286,7 @@
 
 <input type="checkbox" id="Chinmayi" class="toggle-section" hidden>
 <section class="info-section">
-    <h2>INDUSTRIAL STRATEGIES for Chinmayi</h2>
+    <h2>INDUSTRIAL STRATEGIES Of Chinmayi</h2>
     <ul>
         <li><strong><ul>
         <li><strong>a. Goal (SDG_GOAL):*</strong> Goal 11: Make cities and human settlements inclusive, safe, resilient, and sustainable.</li> 
@@ -298,7 +298,7 @@
 
 <input type="checkbox" id="RiaAndSanjana" class="toggle-section" hidden>
 <section class="info-section">
-    <h2>INDUSTRIAL STRATEGIES for Ria and Sanjana</h2>
+    <h2>INDUSTRIAL STRATEGIES Of Ria and Sanjana</h2>
     <ul>
         <li><strong>SDG Target 11.2</strong><br>Focus: Provide access to safe, affordable transport systems...</li>
         <li><strong>SDG Target 3.6</strong><br>Focus: Halve the number of global deaths from road accidents...</li>
@@ -308,7 +308,7 @@
 
 <input type="checkbox" id="AnanyaAndChinmayi" class="toggle-section" hidden>
 <section class="info-section">
-    <h2>INDUSTRIAL STRATEGIES for Ananya and Chinmayi</h2>
+    <h2>INDUSTRIAL STRATEGIES for Ananya Of Chinmayi</h2>
     <ul>
         <li><strong>a. Goal (SDG_GOAL):*</strong> Goal 11: Make cities and human settlements inclusive, safe, resilient, and sustainable.</li> 
         <li><strong>b. Target (SDG_TARGET):*</strong> Target 11.2: By 2030, provide access to safe, affordable, accessible, and sustainable transport systems for all, improving road safety, notably by expanding public transport.</li>  
@@ -353,7 +353,33 @@
     </div>
 
     </section>
+    <a href="#" onclick="toggleContent()">Reflections</a>
 
+    <!-- Hidden content -->
+    <div id="reflections-content" class="content">
+        <h2>RIA'S REFLECTIONS</h2>
+        <h3>Algorithmic Problem-Solving Techniques</h3>
+        <ol>
+            <li><strong>Problems in Nature</strong></li>
+            <ul>
+                <li><strong>Iteration:</strong> Compound Interest (adds over time), Traffic Lights (switch colors).</li>
+                <li><strong>Recursion:</strong> Directory Size (adds folders), Fractals (self-similarity).</li>
+                <li><strong>Backtracking:</strong> Sudoku solving, Maze exploration.</li>
+                <li><strong>Divide and Conquer:</strong> Merging records, Sorting (Merge Sort).</li>
+                <li><strong>Greedy Algorithm:</strong> ATM Withdrawal, Activity Scheduling.</li>
+                <li><strong>Dynamic Programming:</strong> Route Planning, Fibonacci numbers.</li>
+                <li><strong>Graph Algorithms:</strong> Shortest Path (Dijkstra), MST (Prim's/Kruskal's).</li>
+            </ul>
+            <li><strong>Space and Time Efficiency</strong></li>
+            <p>Orders of Growth, complexity optimization, and trade-offs.</p>
+            <li><strong>Design Principles:</strong> Shortest Paths, Partitioning, Balancing structures, Pruning.</li>
+            <li><strong>Hierarchical Data Structures:</strong> Trees, BSTs, Heaps, Tries.</li>
+            <li><strong>Array Query Algorithms:</strong> Efficient queries and updates for arrays.</li>
+            <li><strong>Trees and Graphs:</strong> Traversals and real-world applications.</li>
+            <li><strong>Sorting and Searching Algorithms:</strong> Efficient sorting and lookup techniques.</li>
+        </ol>
+    </div>
+    
 <footer>
     <p>&copy; 2024 VAYUJIVA | Designed by RIA JAVALAGI</p>
 </footer>
