--- a/index.html
+++ b/index.html
@@ -356,7 +356,12 @@
     <a href="#" onclick="toggleContent()">Reflections</a>
 
     <!-- Hidden content -->
-    <div id="reflections-content" class="content">
+    <br>
+    <button class="button" onclick="toggleInfo('reflections')">Reflections</button>
+    <br><br>
+
+    <!-- Reflections Section -->
+    <section id="reflections" style="display:none;">
         <h2>RIA'S REFLECTIONS</h2>
         <h3>Algorithmic Problem-Solving Techniques</h3>
         <ol>
@@ -378,7 +383,8 @@
             <li><strong>Trees and Graphs:</strong> Traversals and real-world applications.</li>
             <li><strong>Sorting and Searching Algorithms:</strong> Efficient sorting and lookup techniques.</li>
         </ol>
-    </div>
+    </section>
+
     
 <footer>
     <p>&copy; 2024 VAYUJIVA | Designed by RIA JAVALAGI</p>
