--- a/index.html
+++ b/index.html
@@ -360,7 +360,9 @@
 
     <!-- Reflections Section -->
     <section id="reflections" style="display:none;">
-         <h1>RIA'S REFLECTIONS</h1>
+        <button class="button" onclick="toggleInfo('rias-reflections')">RIA's REFLECTIONS</button><br>
+
+    <section id="rias-reflections" style="display: none;">
     <h2>Algorithmic Problem-Solving Techniques</h2>
     <ol>
         <li>
@@ -435,7 +437,7 @@
         </li>
     </ol>ent 
     </section>
-
+    </section>
     
 <footer>
     <p>&copy; 2024 VAYUJIVA | Designed by RIA JAVALAGI</p>
