--- a/index.html
+++ b/index.html
@@ -437,9 +437,7 @@
         </li>
     </ol>ent 
     </section>
-<br> <button class="reflection-button" onclick="toggleReflection()">CHINNMAY'S REFLECTION</button><br>
-
-    <!-- Content to toggle -->
+<br> <button class="reflection-button" onclick="toggleReflection()">CHINNMAY'S REFLECTION</button>
     <div id="reflectionContent" class="reflection-content">
     <h2>Course Reflections</h2>
     <ol>
@@ -527,8 +525,6 @@
             </p>
         </li>
     </ol>
-</body>
-</html>
 </section>
     </section>
     
