--- a/index.html
+++ b/index.html
@@ -437,9 +437,10 @@
         </li>
     </ol>ent 
     </section>
-<br> <button class="reflection-button" onclick="toggleReflection()">CHINNMAY'S REFLECTION</button>
-    <div id="reflectionContent" class="reflection-content">
-    <h2>Course Reflections</h2>
+        <button class="button" onclick="toggleInfo('chi-reflections')">CHINNMAY's REFLECTIONS</button><br>
+
+    <section id="chi-reflections" style="display: none;">
+   <h2>Course Reflections</h2>
     <ol>
         <li>
             <b>What are the kinds of problems we see in nature? (iteration, recursion, backtracking)?</b>
@@ -525,7 +526,7 @@
             </p>
         </li>
     </ol>
-</section>
+    </section>
     </section>
     
 <footer>
